# pythonisms

./: README.md  pyproject.toml
pythonisms/: stack.py  wrappers.py
tests/: test_pythonisms.py
